supporting sample comparision